--- a/HTML-CSS/practice-navbar/navbar.css
+++ b/HTML-CSS/practice-navbar/navbar.css
@@ -12,35 +12,32 @@ body {
 
 .navbar {
     background-color: rgb(238, 99, 6);
-    size: 50;
+    size: 100;
+    height: 10%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+
+}
+h1{
+    height: 20px;
+}
+input{
+    margin-left: 500px;
 }
 
-.navbar1{   
-    margin-top: 7px;
-    display: flex;
-    justify-content: space-between;
-    margin-right: 50px;
-    color: #fff;
-    padding: 20px;
+a{
+    margin-top: 20px;
 }
 
-.navbar2{
-    margin-top: 7px;
-    display: flex;
-    justify-content: space-between;
-    margin-right: 50px;
-    color: #fff;
-}
+
 
 button{
     background-color: #04090f;
     color: #fff;
     border: 1px solid rgba(0, 0, 0, 0) ;
     border-radius: 100px;
-    display: inline-block;
-    padding: 8px;
+    padding: 20px;
     font-size: 0.8em;
+    margin-right: 100px;
 }
 
