--- a/HTML-CSS/practice-navbar/home.css
+++ b/HTML-CSS/practice-navbar/home.css
@@ -18,18 +18,18 @@ body {
     justify-content: space-around;
 
 }
-h1{
+.navbar h1{
     height: 20px;
 }
-input{
+.navbar input{
     margin-left: 500px;
 }
 
-a{
+.navbar a{
     margin-top: 20px;
 }
 
-button{
+.navbar button{
     background-color: #04090f;
     color: #fff;
     border: 1px solid rgba(0, 0, 0, 0) ;
@@ -37,6 +37,12 @@ button{
     padding: 20px;
     font-size: 0.8em;
     margin-right: 100px;
+}
+table{
+    margin-left: 50px;
+    margin-top: 100px;
+    width: 90%;
+    height: 50%;
 }
 
 th, td{
